--- a/markdown/Makefile
+++ b/markdown/Makefile
@@ -1,20 +1,22 @@
-SLIDES := $(patsubst %.md,%.md.slides.pdf,$(wildcard *.md))
-HANDOUTS := $(patsubst %.md,%.md.handout.pdf,$(wildcard *.md))
+SLIDES := $(patsubst %.md,%.pdf,$(wildcard *.md))
+TEX := $(patsubst %.md,%.tex,$(wildcard *.md))
 
-all : $(SLIDES) $(HANDOUTS)
+all :  $(TEX) $(SLIDES)
 
-%.md.slides.pdf : %.md
-	pandoc $^ -t beamer --pdf-engine-opt="-shell-escape" --template=template/default.beamer --slide-level 2 -o $@
+%.tex: %.md
+	pandoc $^ \
+		-t beamer \
+		--standalone \
+		--slide-level 2 \
+		-o $@ 
 
-%.md.handout.pdf : %.md
-	pandoc $^ -t beamer  --pdf-engine-opt="-shell-escape" --template=template/default.beamer --slide-level 2 -V handout -o $@ 
-	pdfnup $@ --nup 1x2 --no-landscape --keepinfo \
-		--paper letterpaper --frame true --scale 0.9 \
-		--suffix "nup"
-	mv $*.md.handout-nup.pdf $@
-		
+%.pdf : %.md
+	rm -rf temp && \
+	pandoc $^ \
+		-t beamer \
+		--slide-level 2 \
+		--pdf-engine-opt=--output-dir=temp \
+		--pdf-engine-opt=--shell-escape \
+		-o $@ 
 
-clobber : 
-	rm -f $(SLIDES)
-	rm -f $(HANDOUTS)
 
